@@ -6,6 +6,7 @@ AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(config.h)
 AC_LANG_CPLUSPLUS
 AC_PROG_CXX
+AC_OPENMP
 AC_PROG_RANLIB
 AC_C_BIGENDIAN
 
@@ -94,7 +95,7 @@ dnl **********************************************************
 dnl for Mutex lock in datastream.cpp
 AC_CHECK_LIB(rt, clock_gettime)
 
-CXXFLAGS="${CXXFLAGS} ${M5ACCESS_CFLAGS} ${VDIFIO_CFLAGS} ${MATH_CFLAGS} ${FFTW3_CFLAGS} ${DIFXMESSAGE_CFLAGS} ${MARK5IPC_CFLAGS} ${CFLAG_QUIET}"
+CXXFLAGS="${CXXFLAGS} ${M5ACCESS_CFLAGS} ${VDIFIO_CFLAGS} ${MATH_CFLAGS} ${FFTW3_CFLAGS} ${DIFXMESSAGE_CFLAGS} ${MARK5IPC_CFLAGS} ${CFLAG_QUIET} ${OPENMP_CXXFLAGS}"
 LIBS="${M5ACCESS_LIBS} ${VDIFIO_LIBS} ${SS_LIBS} ${MATH_LIBS} ${DIFXMESSAGE_LIBS} ${MARK5IPC_LIBS} $LIBS"
 
 echo "CXXFLAGS = ${CXXFLAGS}"
